--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -7,6 +7,7 @@
 h1, h2, h3{font-family: 'Russo One', sans-serif;}
 
 #portfolio-page{
+  img{max-width: 100%; }
   h1{font-size: 50px;}
   #works{
     .caption{
