--- a/public/src/less/gallery.less
+++ b/public/src/less/gallery.less
@@ -51,7 +51,7 @@
 }
 
 /* Стили картинок, видое и фреймов внутри адаптивных плиток */
-img, iframe {
+img {
     max-width: 100%;
     height: auto;
     display: block;
