--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -50,7 +50,8 @@ h1, h2, h3{font-family: 'Russo One', sans-serif;}
           &.arin{color: #ff0068;}
           &.pizza{color: #409b00;}
           &.sovet{color: #560a16;}
-
+          &.trawelmuseum{color: #8dcbfe;}
+          &.rainbow{color: #b0b9e2;}
           span{color: @dark}
           h2:after{
             //transform: translateX(0);
